--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       rel="stylesheet"
     />
     <title>Connect Four</title>
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
